--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="jquery-3.1.1.min.js"></script>
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -20,7 +19,7 @@
     <input type="submit" value="Заказать звонок"/>
 </form>
 
-
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
